* Room :
	- SetLavaIntensity
	- [Get/Set]RainIntensity
	- [Get/Set]LightningIntensity
	- DoLightningStrike
	- GetNumRainSpawners
* Added MC_PRE_PICKUP_VOIDED(EntityPickup Pickup, boolean IsBlackRune), MC_PRE_PICKUP_VOIDED_ABYSS(EntityPickup Pickup) and MC_PRE_PICKUP_COMPOSTED(EntityPickup Pickup) callbacks, returning false cancels the pickup getting consumed.
/newline/
Modified:
* PlayerManager :
	- FirstCollectibleOwner(CollectibleType Collectible, boolean LazSharedGlobalTag = true)
	- FirstTrinketOwner(TrinketType Trinket, RNG RNG = nil, boolean LazSharedGlobalTag = true)
* PRE/POST_PLAYERHUD_RENDER_HEARTS callback now passes EntityPlayer (Vector Offset(?), Sprite HeartsSprite, Vector Position, float Unknown, EntityPlayer Player)
/newline/
Fixes:
* Fixed relative ids being displayed as actual ids on xmldata tables. 
* Fix GridEntity:ToFire/ToTNT/ToWall functions
* Fixed binder for Entity:ComputeStatusEffectDuration
* Fixed pause menu modded marks rendering over the controller disconected popup
* Fixed DamageFlag.DAMAGE_RED_HEARTS / .DAMAGE_NO_PENALTIES / .DAMAGE_FAKE not working when adding them via MC_ENTITY_TAKE_DMG's return table.
/newline/
/newline/
v1.0.5a -
Fixes:
* Hot-Fixed a crash that happened when no mods were enabled in 1.0.5
/newline/
/newline/
v1.0.5 -
Additions:
* Added Challenge completion tracking to the mod challenges menu
* Added localization code support
* Added settings to change unifont rendering size
* Add Update callbacks for GridEntityTNT
* Add Render callbacks for GridEntityLock and GridEntityTeleporter
* LayerState:
	- Get/SetWrapSMode
	- Get/SetWrapTMode
	- these play some currently unknown role in allowing sprites to wrap around, and is required for Beam sprites
* Beam and Point have recieved some reworks in preparation for a future cord reimplementation