@@ -1,3 +1,12 @@
+"558bec83ec40a1????????33c58945??568bf1":
+__thiscall void Leaderboard::ProcessInput();
+
+"558bec6aff68????????64a1????????5083ec34a1????????33c58945??535657508d45??64a3????????8bf98b45":
+__thiscall void Leaderboard::get_leaderboard(int RankingState, int LiveSelectionState);
+
+"558bec83e4f851538bd95657c783????????00000000":
+__thiscall void Leaderboard::Show(unsigned int Date, ScoreSheet* ScoreSheet, bool SubmitScore);
+
 struct Leaderboard depends (ANM2, DailyChallenge) {
 	{{
 	}}
